--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: hsl(0, 0%, 8%);
+  margin: 0;
 }
 .container {
-  padding: 50px;
+  padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 25px;
   padding-right: 25px;
@@ -19,51 +20,105 @@ body {
   justify-items: center;
   text-align: center;
   flex-direction: column;
-  border-radius: 5px;
+  border-radius: 8px;
+  transition: 0.5s;
 }
-.jessica {
+.container:hover {
+  box-shadow: 0 4px 12px rgba(168, 245, 36, 0.687);
+}
+
+.image-container {
+  justify-content: space-around;
+  margin-bottom: 8px;
+}
+.image {
+  width: 50px;
+  height: 50px;
+  background-position: center;
+  border-radius: 50%;
+  border-color: aliceblue;
+  border: 2px solid #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: 0.5s;
+}
+.image:hover {
+  border-color: rgb(215, 249, 158);
+  box-shadow: 0px 0px 4px rgb(215, 249, 158);
+  
+}
+.el {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  margin-bottom: 6px;
-  font-weight: 700;
-  font-size: larger;
+  margin-bottom: 4px;
+  font-weight: 500;
+  font-size: medium;
   color: aliceblue;
+  transition: 0.5s;
 }
-p {
+.el:hover {
+  color: rgb(215, 249, 158);
+}
+
+.huh {
   margin-top: 0px;
+  font-size: smaller;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: inherit;
 }
 span {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-weight: 400;
   color: rgb(169, 247, 35);
-  font-size: smaller;
+  font-size: xx-small;
   margin-top: 0px;
+  font-weight: bolder;
+  border-radius: 10px;
+  transition: 0.5s;
+  text-decoration: none;
+}
+span:hover {
+  color: rgb(215, 249, 158);
 }
 .bio {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size: small;
-  margin-bottom: 10px;
+  font-size: xx-small;
+  margin-bottom: 15px;
   color: gainsboro;
+  transition: 0.5s;
+}
+.bio:hover {
+  color: rgb(215, 249, 158);
 }
 button {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
   margin: 5px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  padding-left: 40px;
-  padding-right: 40px;
-  font-size: small;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-left: 60px;
+  padding-right: 60px;
+  font-size: x-small;
   border-radius: 6px;
   background-color: hsl(0, 0%, 20%);
   border: none;
   color: aliceblue;
+  transition: 0.5s;
+}
+button:hover {
+  background-color: rgba(168, 245, 36, 0.687);
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(168, 245, 36, 0.687);
+  color: rgb(215, 249, 158);
+}
+button:active {
+  background-color: rgb(215, 249, 158);
 }
